# risczero-poc

./: .gitignore  Cargo.toml  README.md  add-to-path.sh  rust-toolchain.toml
assets/: test_invalid_block_969002.pb
host/: Cargo.toml
host/src/: lib.rs  main.rs
lib/cometbls-groth16-verifier/: Cargo.toml  build.rs
lib/cometbls-groth16-verifier/src/: bounded.rs  errors.rs  lib.rs  uint.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
